terraform/alb.tf
resource "aws_lb" "alb" {
  name               = "crescendo-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ec2_sg.id]
  subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]

  enable_deletion_protection = false

  tags = {
    Name = "CrescendoALB"
  }
}
